[package]
name = "netkraken"
version = "0.1.12"
edition = "2021"

[[bin]]
name = "nk"
path = "src/main.rs"

[dependencies]
# Errors
anyhow = "1.0.72"

# CLI
clap = { version = "4.3.19", features = ["derive"] }

# List IP addresses of all network interfaces
local-ip-address = "0.6.1"

futures = "0.3.28"

# Serialization/Deserialization
serde = "1.0.181"
serde_derive = "1.0.181"
serde_json = "1.0.104"

# Nice result output
tabled = "0.18.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"

# Configuration
toml = "0.8.12"

# HTTP Client
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"
time = "0.3.41"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
