[package]
name = "netkraken"
version = "0.2.7"
edition = "2024"

[[bin]]
name = "nk"
path = "src/main.rs"

[dependencies]
# Errors
anyhow = "1.0.97"

# CLI
clap = { version = "4.5.35", features = ["derive"] }

# List IP addresses of all network interfaces
local-ip-address = "0.6.3"

# Serialization/Deserialization
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"

# Nice result output
tabled = "0.18.0"

# Async
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"

# Configuration
toml = "0.8.20"

# HTTP Client
hyper-util = "0.1.11"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }

# DNS Client
hickory-resolver = "0.25.1"

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# What's the time Mr Wolf
jiff = "0.2.10"

# Unique IDs
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
